--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "studio": "drizzle-kit studio",
     "generate": "drizzle-kit generate:pg",
     "drizzle:push": "drizzle-kit push:pg",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -30,6 +31,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/pg": "^8.10.9",
     "apollo-server-express": "^3.13.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "drizzle-orm": "^0.29.0",
     "graphql": "^16.8.1",
