[feature] 대충 post 연관관계 설정

--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -36,6 +36,7 @@ jobs:
               ports: 3000
               build: npm run build
               start: npm run start:dev
+              install: npm install
             context:
               git:
                 url: git@github.com:${{ github.repository }}.git
